--- a/Views/Empresa/Registrar.cshtml
+++ b/Views/Empresa/Registrar.cshtml
@@ -5,43 +5,42 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row" style="margin-top:30px">
-    <div class="col-sm-12">
-
-        <div class="panel panel-warning">
+<div class="row" style="margin-top:35px">
+    <div class="col-sm-12 text-center">
+        <!-- Agregué la clase text-center -->
+        <div class="panel panel-warning" style="display: inline-block;">
+            <!-- Agregué display: inline-block -->
             <div class="panel-heading">
-                <h4>NUEVA EMPRESA</h4>
+                <h4>NUEVA EMPRESA</h4><br />
             </div>
             <div class="panel-body">
                 <form action="@Url.Action("Registrar","Empresa")" method="post">
-                   
+
                     <div class="form-group">
                         <label>RTN</label>
-                        <input type="text" class="form-control" name="RTN" required />
+                        <input type="text" class="form-control" name="RTN" required /><br />
                     </div>
                     <div class="form-group">
                         <label>Nombre empresa</label>
-                        <input type="text" class="form-control" name="NOMBRE_EMPRESA" required />
+                        <input type="text" class="form-control" name="NOMBRE_EMPRESA" required /><br />
                     </div>
                     <div class="form-group">
                         <label>Correo electronico</label>
-                        <input type="text" class="form-control" name="CORREO_ELECTRONICO" required />
+                        <input type="text" class="form-control" name="CORREO_ELECTRONICO" required /><br />
                     </div>
 
                     <div class="form-group">
                         <label for="ID_CORPORACION">Corporacion</label>
-                        @Html.DropDownListFor(model => model.ID_CORPORACION, (SelectList)ViewBag.Corporaciones, new { @class = "form-control" })
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        @Html.DropDownListFor(model => model.ID_CORPORACION, (SelectList)ViewBag.Corporaciones, new { @class = "form-control" })<br />
+                       
                     </div>
-                        <button type="submit" class="btn btn-primary">Registrar</button>
-                        <a class="btn btn-warning" href="@Url.Action("empresa","Empresa")">Volver</a>
+                    <button type="submit" class="btn btn-primary">Registrar</button>
+                    <a class="btn btn-warning" href="@Url.Action("empresa","Empresa")">Volver</a>
 
-                    </form>
-
-
-                </div>
+                </form>
             </div>
         </div>
     </div>
+</div>
 
 
