--- a/Views/Herramienta/Herramienta.cshtml
+++ b/Views/Herramienta/Herramienta.cshtml
@@ -43,7 +43,7 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <input type="button" value="TIPO_HERRAMIENTA" class="btn btn-sm btn-dark" onclick="location.href='@Url.Action("Tipo", "Tipo")'" />
+                    <input type="button" value="TIPO HERRAMIENTA" class="btn btn-sm btn-dark" onclick="location.href='@Url.Action("Tipo", "Tipo")'" />
 
                     <input type="button" value="MARCA" class="btn btn-sm btn-dark" onclick="location.href='@Url.Action("Marca", "Marca")'" />
 
