--- a/Views/Tipo/Editartipo.cshtml
+++ b/Views/Tipo/Editartipo.cshtml
@@ -11,7 +11,7 @@
         <div class="panel panel-warning" style="display: inline-block;">
             <!-- Agregué display: inline-block -->
             <div class="panel-heading">
-                <h4>ACTUALIZAR TIPO HERRAMIENTA</h4>
+                <h4>ACTUALIZAR TIPO HERRAMIENTA</h4><br />
             </div>
             <div class="panel-body">
                 <form action="@Url.Action("Editartipo","Tipo")" method="post">
