--- a/Views/Empleado/empleado.cshtml
+++ b/Views/Empleado/empleado.cshtml
@@ -64,6 +64,7 @@
                                     <th>Departamento</th>
                                     <th>Rol</th>
                                     <th>Estado empleado</th>
+                                    <th>Numero de herramientas</th>
                                     <th>Fecha registro</th>
                                     <th style="width:150px"></th>
                                 </tr>
@@ -82,6 +83,7 @@
                                         <td>@item.DEPARTAMENTO.DECRIPCION_DEPARTAMENTO</td>
                                         <td>@item.ROL.DECRIPCION_ROL</td>
                                         <td>@item.ESTADO_EMPLEADO.DESCRIPCION_ESTADO_EMPLEADO</td>
+                                        <td>@item.NUMERO_DE_HERRAMIENTAS</td>
                                         <td>@item.FECHA_REGISTRO</td>
                                         <td>
                                             <a class="btn btn-primary btn-sm" href="@Url.Action("Editaremple","Empleado", new { Idempleado = item.ID_EMPLEADO })">
@@ -94,7 +96,7 @@
 
                                     </tr>
 
-                                }
+                                 }
 
                             </tbody>
                         </table>
@@ -105,7 +107,7 @@
     </div>
 
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Bootstrap JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
