--- a/Views/Empresa/Eliminar.cshtml
+++ b/Views/Empresa/Eliminar.cshtml
@@ -7,11 +7,12 @@
 
 
 <div class="row" style="margin-top:30px">
-    <div class="col-sm-12">
-
-        <div class="panel panel-warning">
+    <div class="col-sm-12 text-center">
+        <!-- Agregué la clase text-center -->
+        <div class="panel panel-warning" style="display: inline-block;">
+            <!-- Agregué display: inline-block -->
             <div class="panel-heading">
-                <h4>ELIMINAR EMPRESA</h4>
+                <h4>ELIMINAR EMPRESA</h4><br />
             </div>
             <div class="panel-body">
                 <div class="alert alert-danger">
