--- a/Views/Herramienta/Editarherramienta.cshtml
+++ b/Views/Herramienta/Editarherramienta.cshtml
@@ -6,11 +6,12 @@
 }
 
 <div class="row" style="margin-top:30px">
-    <div class="col-sm-12">
-
-        <div class="panel panel-warning">
+    <div class="col-sm-12 text-center">
+        <!-- Agregué la clase text-center -->
+        <div class="panel panel-warning" style="display: inline-block;">
+            <!-- Agregué display: inline-block -->
             <div class="panel-heading">
-                <h4>EDITAR HERRAMIENTA</h4>
+                <h4>EDITAR HERRAMIENTA</h4><br />
             </div>
             <div class="panel-body">
                 <form action="@Url.Action("Editarherramienta","Herramienta")" method="post">
@@ -19,26 +20,24 @@
 
                     <div class="form-group">
                         <label for="ID_TIPO_HERRAMIENTA">Tipo herramienta</label>
-                        @Html.DropDownListFor(model => model.ID_TIPO_HERRAMIENTA, (SelectList)ViewBag.Tipo, new { @class = "form-control" })
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        @Html.DropDownListFor(model => model.ID_TIPO_HERRAMIENTA, (SelectList)ViewBag.Tipo, new { @class = "form-control" })<br />
                     </div>
 
                     <div class="form-group">
                         <label for="ID_MARCA">Marca</label>
-                        @Html.DropDownListFor(model => model.ID_MARCA, (SelectList)ViewBag.Marca, new { @class = "form-control" })
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        @Html.DropDownListFor(model => model.ID_MARCA, (SelectList)ViewBag.Marca, new { @class = "form-control" })<br />
                     </div>
 
                     <div class="form-group">
                         <label>Modelo</label>
-                        <input type="text" class="form-control" name="MODELO" value="@Html.DisplayTextFor(m=>m.MODELO)" />
+                        <input type="text" class="form-control" name="MODELO" required value="@Html.DisplayTextFor(m=>m.MODELO)" />
                     </div>
 
                     <div class="form-group">
                         <label>Comentario</label>
                         <input type="text" class="form-control" name="COMENTARIO" value="@Html.DisplayTextFor(m=>m.COMENTARIO)" /><br />
                     </div>
-                    
+
                     <button type="submit" class="btn btn-primary">Actualizar</button>
                     <a class="btn btn-warning" href="@Url.Action("Herramienta","Herramienta")">Volver</a>
 
