--- a/Views/Herramienta/Registrarherramienta.cshtml
+++ b/Views/Herramienta/Registrarherramienta.cshtml
@@ -6,11 +6,12 @@
 }
 
 <div class="row" style="margin-top:30px">
-    <div class="col-sm-12">
-
-        <div class="panel panel-warning">
+    <div class="col-sm-12 text-center">
+        <!-- Agregué la clase text-center -->
+        <div class="panel panel-warning" style="display: inline-block;">
+            <!-- Agregué display: inline-block -->
             <div class="panel-heading">
-                <h4>NUEVA HERRAMIENTA</h4>
+                <h4>NUEVA HERRAMIENTA</h4><br />
             </div>
             <div class="panel-body">
                 <form action="@Url.Action("Registrarherramienta","Herramienta")" method="post">
@@ -18,28 +19,27 @@
 
                     <div class="form-group">
                         <label for="ID_TIPO_HERRAMIENTA">Tipo herramienta</label>
-                        @Html.DropDownListFor(model => model.ID_TIPO_HERRAMIENTA, (SelectList)ViewBag.Tipo, new { @class = "form-control" })
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        @Html.DropDownListFor(model => model.ID_TIPO_HERRAMIENTA, (SelectList)ViewBag.Tipo, new { @class = "form-control" })<br />
                     </div>
 
                     <div class="form-group">
                         <label for="ID_MARCA">Marca</label>
-                        @Html.DropDownListFor(model => model.ID_MARCA, (SelectList)ViewBag.Marca, new { @class = "form-control" })
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        @Html.DropDownListFor(model => model.ID_MARCA, (SelectList)ViewBag.Marca, new { @class = "form-control" })<br />
                     </div>
 
+                       
                     <div class="form-group">
                         <label>Modelo</label>
-                        <input type="text" class="form-control" name="Modelo" />
+                        <input type="text" class="form-control" name="Modelo" required /><br />
                     </div>
 
                     <div class="form-group">
                         <label>Comentario</label>
-                        <input type="text" class="form-control" name="Comentario"/>
-                     </div>
+                        <input type="text" class="form-control" name="Comentario" /><br />
+                    </div>
 
-                        <button type="submit" class="btn btn-primary">Registrar</button>
-                        <a class="btn btn-warning" href="@Url.Action("Herramienta","Herramienta")">Volver</a>
+                    <button type="submit" class="btn btn-primary">Registrar</button>
+                    <a class="btn btn-warning" href="@Url.Action("Herramienta","Herramienta")">Volver</a>
 
                 </form>
             </div>
