--- a/Views/Sucursal/Crear.cshtml
+++ b/Views/Sucursal/Crear.cshtml
@@ -6,11 +6,12 @@
 }
 
 <div class="row" style="margin-top:30px">
-    <div class="col-sm-12">
-
-        <div class="panel panel-warning">
+    <div class="col-sm-12 text-center">
+        <!-- Agregué la clase text-center -->
+        <div class="panel panel-warning" style="display: inline-block;">
+            <!-- Agregué display: inline-block -->
             <div class="panel-heading">
-                <h4>NUEVA SUCURSAL</h4>
+                <h4>NUEVA SUCURSAL</h4><br/>
             </div>
             <div class="panel-body">
                 <form action="@Url.Action("Crear","Sucursal")" method="post">
@@ -18,28 +19,27 @@
 
                     <div class="form-group">
                         <label>Nombre sucursal</label>
-                        <input type="text" class="form-control" name="NOMBRE_SUCURSAL" required/>
+                        <input type="text" class="form-control" name="NOMBRE_SUCURSAL" required /><br />
                     </div>
 
                     <div class="form-group">
                         <label>Correo electronico</label>
-                        <input type="text" class="form-control" name="CORREO_ELECTRONICO" required />
+                        <input type="text" class="form-control" name="CORREO_ELECTRONICO" required /><br />
                     </div>
 
                     <div class="form-group">
                         <label>Direccion</label>
-                        <input type="text" class="form-control" name="DIRECCION" required />
+                        <input type="text" class="form-control" name="DIRECCION" required /><br />
                     </div>
 
                     <div class="form-group">
                         <label for="ID_EMPRESA">Empresa</label>
-                        @Html.DropDownListFor(model => model.ID_EMPRESA, (SelectList)ViewBag.iEmpresas, new { @class = "form-control" })
+                        @Html.DropDownListFor(model => model.ID_EMPRESA, (SelectList)ViewBag.iEmpresas, new { @class = "form-control" })<br />
                     </div>
 
                     <div class="form-group">
                         <label>Comentario</label>
-                        <input type="text" class="form-control" name="COMENTARIO" />
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <input type="text" class="form-control" name="COMENTARIO" /><br />
                     </div>
 
                     @if (ViewData["MENSAJESUCURSAL"] != null)
