--- a/Views/Sucursal/Editarsucur.cshtml
+++ b/Views/Sucursal/Editarsucur.cshtml
@@ -6,41 +6,41 @@
 }
 
 <div class="row" style="margin-top:30px">
-    <div class="col-sm-12">
-
-        <div class="panel panel-warning">
+    <div class="col-sm-12 text-center">
+        <!-- Agregué la clase text-center -->
+        <div class="panel panel-warning" style="display: inline-block;">
+            <!-- Agregué display: inline-block -->
             <div class="panel-heading">
                 <h4>ACTUALIZAR SUCURSAL</h4>
             </div>
             <div class="panel-body">
                 <form action="@Url.Action("Editarsucur","Sucursal")" method="post">
 
-                    <input type="hidden" class="form-control" name="ID_SUCURSAL" value="@Html.DisplayTextFor(m=>m.ID_SUCURSAL)" />
+                    <input type="hidden" class="form-control" name="ID_SUCURSAL" value="@Html.DisplayTextFor(m=>m.ID_SUCURSAL)" /><br />
 
                     <div class="form-group">
-                        <label>Nombre sursal</label>
-                        <input type="text" class="form-control" name="NOMBRE_SUCURSAL" value="@Html.DisplayTextFor(m=>m.NOMBRE_SUCURSAL)" />
+                        <label>Nombre sucursal</label>
+                        <input type="text" class="form-control" name="NOMBRE_SUCURSAL" value="@Html.DisplayTextFor(m=>m.NOMBRE_SUCURSAL)" /><br />
                     </div>
 
                     <div class="form-group">
                         <label>Correo electronico</label>
-                        <input type="text" class="form-control" name="CORREO_ELECTRONICO" value="@Html.DisplayTextFor(m=>m.CORREO_ELECTRONICO)" />
+                        <input type="text" class="form-control" name="CORREO_ELECTRONICO" value="@Html.DisplayTextFor(m=>m.CORREO_ELECTRONICO)" /><br />
                     </div>
 
                     <div class="form-group">
                         <label>Direccion</label>
-                        <input type="text" class="form-control" name="DIRECCION" value="@Html.DisplayTextFor(m=>m.DIRECCION)" />
+                        <input type="text" class="form-control" name="DIRECCION" value="@Html.DisplayTextFor(m=>m.DIRECCION)" /><br />
                     </div>
 
                     <div class="form-group">
                         <label for="ID_EMPRESA">Empresa</label>
-                        @Html.DropDownListFor(model => model.ID_EMPRESA, (SelectList)ViewBag.iEmpresas, new { @class = "form-control" })
+                        @Html.DropDownListFor(model => model.ID_EMPRESA, (SelectList)ViewBag.iEmpresas, new { @class = "form-control" })<br />
                     </div>
 
                     <div class="form-group">
                         <label>Comentario</label>
-                        <input type="text" class="form-control" name="COMENTARIO" value="@Html.DisplayTextFor(m=>m.COMENTARIO)" />
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <input type="text" class="form-control" name="COMENTARIO" value="@Html.DisplayTextFor(m=>m.COMENTARIO)" /><br />
                     </div>
 
                     @if (ViewData["MENSAJESUCURSAL"] != null)
