--- a/Views/Tipo/registrartipo.cshtml
+++ b/Views/Tipo/registrartipo.cshtml
@@ -6,17 +6,18 @@
 }
 
 <div class="row" style="margin-top:30px">
-    <div class="col-sm-12">
-
-        <div class="panel panel-warning">
+    <div class="col-sm-12 text-center">
+        <!-- Agregué la clase text-center -->
+        <div class="panel panel-warning" style="display: inline-block;">
+            <!-- Agregué display: inline-block -->
             <div class="panel-heading">
-                <h4>NUEVO TIPO HERRAMIENTA</h4>
+                <h4>NUEVO TIPO HERRAMIENTA</h4><br />
             </div>
             <div class="panel-body">
                 <form action="@Url.Action("registrartipo","Tipo")" method="post">
                     <div class="form-group">
                         <label>Tipo herramienta</label>
-                        <input type="text" class="form-control" name="DECRIPCION_TIPO_HERRAMIENTA" required />
+                        <input type="text" class="form-control" name="DECRIPCION_TIPO_HERRAMIENTA" required /><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     </div>
 
